--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,26 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-
-jobs:
-  test-job:
-    docker:
-      - image: "circleci/node:lts"
-
-    working_directory: ~/repo
-
-    steps:
-      - checkout
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - dependencies-{{ checksum "yarn.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - dependencies-
-
-      - run: yarn setup
-
-      - save_cache:
-          paths:
-            - node_modules
-            - client/node_modules
-            - server/node_modules
-          key: dependencies-{{ checksum "yarn.lock" }}
-
-      - run:
-          command: yarn lint
-
-      - run:
-          command: yarn test
-          environment:
-            TZ: UTC
-            REACT_APP_COMMIT_SHA: some_sha
-
-      - store_artifacts: # For coverage report
-          path: client/coverage
-
-orbs: # declare what orbs we are going to use
-  node: circleci/node@2.0.2 # the node orb provides common node-related configuration
-
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+jobs:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  tests:
+  say-hello-workflow:
     jobs:
-      - test-job
+      - say-hello
